[workspace]
members = ["node", "pallets/template", "runtime"]
resolver = "2"

[profile.release]
panic = "unwind"

[workspace.package]
authors = ["Magport/Magnet team"]
edition = "2021"
homepage = "https://magnet.magport.io/"
license = "Apache License 2.0"
repository = "https://github.com/Magport/Substrate-Rollup"
